# Todolyst

./: .coveragerc  .gitignore  README.md  README.rst  debug.log.2023-10-19  error.log.2023-10-19  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree  readme.doctree
docs/_build/doctrees/source/: modules.doctree  todolyst.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/todolyst/: TodoLyst.html  TodolystExceptions.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/source/: modules.html  todolyst.html
docs/source/: modules.rst
documentation/: conf.py  index.rst
documentation/_build/doctrees/: README.doctree  environment.pickle  index.doctree  modules.doctree  todolyst.doctree
documentation/_build/doctrees/source/: modules.doctree  todolyst.doctree
documentation/_build/html/: .buildinfo  README.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  todolyst.html
documentation/_build/html/_modules/: index.html
documentation/_build/html/_modules/todolyst/: TodoLyst.html  TodolystExceptions.html
documentation/_build/html/_sources/: README.rst.txt  todolyst.rst.txt
documentation/_build/html/source/: modules.html  todolyst.html
tests/: test_TodoLyst.py
todolyst/: TodoLyst.py  TodolystExceptions.py
