[tool.poetry]
name = "todolyst"
version = "0.1.0"
description = ""
authors = ["Frédéric Lauron <fred@example.com>","Pascal Mahé <pascal@example.com>","Yannick Letort <yannick@example.com>","Pierre DLVM <pierre@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


